--- a/css/styles/paymentBonds.css
+++ b/css/styles/paymentBonds.css
@@ -1,7 +1,7 @@
 @page {}
 
 * {
-    font-size: 12px;
+    font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
@@ -11,5 +11,7 @@
 }
 
 .container {
-    background-color: aqua;
+    border-style: solid;
+    padding: 20px;
+    width: 300px;
 }
