--- a/css/styles/paymentBonds.css
+++ b/css/styles/paymentBonds.css
@@ -1,47 +1,55 @@
-@page {
-    size: 80mm 100mm;
-}
-
-body.receipt.sheet {
+    /* @page {
+    size: 80mm;
+} */
+    /* body.receipt.sheet {
     width: 58mm;
     height: 100mm;
-}
-
+} */
+    
+    @media print {
+        @page {
+            size: a5;
+            margin: 0;
+        }
+    }
+    /* 
 @media print {
     body.receipt {
         width: 80mm
     }
-}
-
-* {
-    font-size: 12px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    margin: none;
-    padding: none;
-}
-
-#main_box {
+} */
+    
+    * {
+        font-size: 2px;
+        font-family: Arial, Helvetica, sans-serif;
+        /* margin: none;
+        padding: none; */
+    }
+    /* #main_box {
     column-width: 50px;
     width: 10px;
-}
-
-label,
+} */
+    /* label,
 input {
     width: 60px;
-}
-
-#receipt_num {
+} */
+    /* #receipt_num {
     column-width: 50px;
-}
-
+} */
+    /* 
 #payment_lable {
     text-align: right;
-}
-
-.container {
-    border-style: solid;
-    margin: none;
-    padding: none;
-    width: 80mm;
-}
+} */
+    
+    .container {
+        border-style: solid;
+        margin: none;
+        padding: none;
+        width: 50%;
+    }
+    
+    #receipt_number,
+    #receipt_number1 {
+        column-width: 10px;
+        font-size: 8pt;
+    }
