--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 *{
     direction: rtl;
 }
+body {
+    text-align: right;
+    background-color: LightGray;
+    position: relative;
+}
+.container {
+    background-color: #5F9EA0;
+    border-style: groove;
+    font-size: 17px;
+    border-radius: 25px;
+    position: absolute;
+    
