--- a/css/styles/open_file.css
+++ b/css/styles/open_file.css
@@ -1,16 +1,14 @@
-body{
-    background-color: aqua;
+.container {
+    left: 25%;
+    top:20%;
+    width: 50%;
+    /* height:50% ; */
+    padding: 30px;
+
 }
-.center{
-    position:absolute;
-    top: 50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    width: 700px;
-    background-color: white;
-}
-table{
-    width: 500px;
-    height: 500px;
-    border: black;
+#btn-grp, #new, #add{
+    border-radius: 4px;
+    text-align: center;
+    margin: 1px;
+    width: 70px;
 }
