--- a/css/styles/item_list.css
+++ b/css/styles/item_list.css
@@ -4,6 +4,7 @@
 }
 #categry_col{
     text-align: left;
+    padding-left:70px;
 }
 #close_col{
     text-align: left;
@@ -16,6 +17,9 @@
 
 }
 #close_btn{
-    margin-left:45px;
+    margin-left:95px;
 
+}
+#search_col{
+    padding-right: 50px;
 }
