--- a/css/styles/com_bill.css
+++ b/css/styles/com_bill.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -7,4 +7,44 @@ table {
     z-index: 2;
     left: 15%;
     text-align: center;
+} */
+
+body {
+    background-color: LightGray;
+    text-align: right;
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container-fluide {
+    position: absolute;
+    border-style: groove;
+    top: 5%;
+    width: 1200px;
+    /* height: 700px ; */
+    border-radius: 25px;
+    border-style: groove;
+    background-color: #5F9EA0;
+    font-size: 19px;
+}
+
+td input {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+table {
+    width: 60%;
+}
+
+#btn-grp {
+    border-radius: 5px;
+    margin: 6px;
+    width: 80px;
+}
+
+#iframe_item_card {
+    background-color: red;
 }
