--- a/css/styles/com_bill.css
+++ b/css/styles/com_bill.css
@@ -1,14 +1,3 @@
-/* body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-table {
-    position: absolute;
-    z-index: 2;
-    left: 15%;
-    text-align: center;
-} */
-
 body {
     background-color: LightGray;
     text-align: right;
@@ -19,14 +8,112 @@ body {
 .container-fluide {
     position: absolute;
     border-style: groove;
-    top: 5%;
-    width: 1200px;
-    /* height: 700px ; */
+    top: 6%;
+    left: 9%;
+    width: 1300px;
     border-radius: 25px;
     border-style: groove;
     background-color: #5F9EA0;
     font-size: 19px;
 }
+.modal{
+    position: fixed; /* Stay in place */
+    overflow: auto; /* Enable scroll if needed */
+}
+#modal_dialog_account{
+    min-width: 790px;  
+}
+#modal_content_account{
+    min-width: 780;
+    min-height: 610px;
+    border-radius: 25px;
+    border-style: groove;
+    margin: auto;
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+#modal_header_account{ 
+    padding: 0 10px;
+    /* background-color: rgb(52,92,100);; */
+    /* color: white;    */
+    display: flex;
+}
+#modal_body_account{
+    position: relative;
+    min-height: 590px;
+    min-width: 780;
+    background-color:rgb(52,92,100);
+}
+h4{  
+}
+#iframe_account_card{
+    position: absolute;
+    width:770px;
+    height:560px;
+   
+}
+#modal_dialog_item{
+    /* min-width: 700px;   */
+}
+#modal_content_item{
+    min-width:790px ;
+    min-height:500px ;
+    border-radius: 25px;
+    border-style: groove;
+    margin: auto;
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+    
+}
+#modal_header_item{ 
+    padding: 0px 10px;
+    /* background-color: rgb(52,92,100);; */
+    /* color: white;    */
+    display: flex;
+}
+#modal_body_item{
+    position: relative;
+    min-width:780px ;
+    min-height:500px ;
+    background-color:rgb(52,92,100);
+}
+#iframe_item_card {
+    position: absolute;
+    min-width:770px;
+    min-height:480px;
+}
+
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+    }
+
+    @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+    }
+    /* The Close Button */
+    .close {
+        color: #aaa;
+        float: left;
+        font-size: 28px;
+        font-weight: bold;
+        margin-left: 30px;
+        margin-top: 30px;
+    }
+    .close:hover,
+    .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
 
 td input {
     width: 100%;
@@ -45,6 +132,11 @@ table {
     width: 80px;
 }
 
-#iframe_item_card {
-    background-color: red;
+
+#last_previous,#previous,#next,#last_next {
+    margin: 0px 4px;
+    border-radius: 4px;
+}
+h2{
+    margin: 0 15;
 }
