--- a/css/styles/category_card.css
+++ b/css/styles/category_card.css
@@ -1,8 +1,8 @@
 .container{
     top:25% ;
-    left:25%;
+    left:28%;
     width: 600px ;
-    height: 330px ;
+    height: 350px ;
     margin-bottom: 0; 
 }
 #category_col{
@@ -14,4 +14,18 @@
     border-radius: 5px;
     margin: 6px;
     width: 80px;
+}
+#button_col{
+    margin-right: 40px;
+}
+h4{
+    margin-right: 20px;
+}
+#last_previous,
+#previous,
+#next,
+#last_next {
+    /* margin: 0px 4px; */
+    border-radius: 4px;
+
 }
