--- a/css/styles/item_card.css
+++ b/css/styles/item_card.css
@@ -4,20 +4,32 @@ body{
 }
 .container{
     top:20% ;
-    left:20%;
+    left:25%;
     width: 700px ;
-    height: 430px ;
+    height: 450px ;
     margin-bottom: 0;
 
 }
-#button-grp1,#button-grp2{
+#btn_grp1,#button-grp2{
     border-radius: 4px;
-    text-align: center; 
-     margin: 3px;
+    /* text-align: center;  */
+    /* margin: 3px; */
 }
 
-#button-grp1{
+#btn_grp1{
+    /* margin-left: 20px; */
 }
 #button-grp2{
-    width: 80px;   
+    width: 70px;   
+}
+h4{
+    margin-right: 20px;
+}
+#last_previous,
+#previous,
+#next,
+#last_next {
+    /* margin: 0px 4px; */
+    border-radius: 4px;
+
 }
