--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
 }
 body {
     text-align: right;
-    background-color: rgb(52,92,100);
+    /* background-color: rgb(52,92,100); */
+    background-color: lightgrey;
     position: relative;
 }
 .container {
