--- a/css/nav.css
+++ b/css/nav.css
@@ -1,4 +1,6 @@
 
 ul{
-    background-color: rgb(24, 41, 64);
+    background-color: #055772;
+    /* background-color: #172238; */
+    /* color: white; */
 }
