--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,22 @@
 }
 body {
     text-align: right;
-    background-color: rgb(52,92,100);
+    /* background-color: rgb(52,92,100); */
     /* background-color: lightgrey; */
+    background-color: #cad2c5;
+    /* background-color: #d9d9d9; */
     position: relative;
 }
 .container {
-    background-color:rgb(75,129,137);
+    background-color: #22577a;
+    /* background-color: #013a63; */
+    /* background-color: #057a8d; */
+    /* background-color:rgb(75,129,137); */
     border-style: groove;
     font-size: 17px;
     border-radius: 25px;
     position: absolute;
+    color: #cad2c5;
 }
 .container-fluid{
     background-color:rgb(75,129,137);
