--- a/css/nav.css
+++ b/css/nav.css
@@ -1,6 +1,8 @@
 
 ul{
-    background-color: #055772;
-    /* background-color: #172238; */
+    background-color: #083e47;
     /* color: white; */
+    height: 60px;
+    font-size: 20;
+
 }
