--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,13 @@ body {
     text-align: right;
     /* background-color: rgb(52,92,100); */
     /* background-color: lightgrey; */
-    background-color: #cad2c5;
+    background-color: #dce2d9;
     /* background-color: #d9d9d9; */
     position: relative;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .container {
-    background-color: #22577a;
+    background-color: #0c6170;
     /* background-color: #013a63; */
     /* background-color: #057a8d; */
     /* background-color:rgb(75,129,137); */
@@ -21,7 +22,7 @@ body {
     color: #cad2c5;
 }
 .container-fluid{
-    background-color:rgb(75,129,137);
+    background-color: #0c6170;
     border-style: groove;
     font-size: 17px;
     border-radius: 25px;
