--- a/css/nav.css
+++ b/css/nav.css
@@ -1,11 +1,4 @@
-nav{
-    height: 60px;
-    font-size: 20;
-    background-color: #083e47;
 
-}
-.container-fluid{
-    border: none;
-    border-radius: 0px;
+ul{
     background-color: #083e47;
 }
