--- a/css/style.css
+++ b/css/style.css
@@ -4,18 +4,23 @@
 
 body {
     text-align: right;
-    background-color: rgb(52, 92, 100);
+    /* background-color: #74c69d; */
+    background-color: #ccd5ae;
     /* background-color: lightgrey; */
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 17;
 }
 
 .container {
-    background-color: rgb(75, 129, 137);
+    /* background-color: #40916c; */
+    background-color: #325865;
+    /* background-color: rgb(75, 129, 137); */
     border-style: groove;
     font-size: 17px;
     border-radius: 25px;
     position: absolute;
+    color:#ccd5ae ;
 }
 
 .container-fluid {
