--- a/css/styles/payment_bonds.css
+++ b/css/styles/payment_bonds.css
@@ -6,7 +6,7 @@ body {
 
 .container {
     position: absolute;
-    background-color: #5F9EA0;
+    /* background-color: #5F9EA0; */
     border-style: groove;
     border-radius: 25px;
     top: 13%;
@@ -15,7 +15,6 @@ body {
     height: 620px;
     font-size: 17px;
     padding: 5px;
-
 }
 
 #res_number {
@@ -24,7 +23,6 @@ body {
 
 #res_num {
     padding-right: 125px;
-
 }
 
 h2,
@@ -45,16 +43,20 @@ h2,
 #last_next {
     margin: 0px 4px;
     border-radius: 4px;
+}
 
+.modal {
+    position: fixed;
+    /* Stay in place */
+    overflow: auto;
+    /* Enable scroll if needed */
 }
-.modal{
-    position: fixed; /* Stay in place */
-    overflow: auto; /* Enable scroll if needed */
+
+.modal-dialog {
+    min-width: 790px;
 }
-.modal-dialog{
-    min-width: 790px;  
-}
-.modal-content{
+
+.modal-content {
     min-width: 780;
     min-height: 650px;
     border-radius: 25px;
@@ -65,26 +67,29 @@ h2,
     animation-name: animatetop;
     animation-duration: 0.4s
 }
-.modal-header{ 
+
+.modal-header {
     padding: 0 10px;
     /* background-color: rgb(52,92,100);; */
     /* color: white;    */
     display: flex;
 }
-.modal-body{
+
+.modal-body {
     position: relative;
     min-width: 780;
     min-height: 630px;
-    background-color:rgb(52,92,100);
+    background-color: rgb(52, 92, 100);
 }
-h4{  
-}
-#iframe_account_card{
+
+h4 {}
+
+#iframe_account_card {
     position: absolute;
-    width:770px;
-    height:600px;
-   
+    width: 770px;
+    height: 600px;
 }
-#code{
+
+#code {
     margin-right: 5px;
 }
