--- a/css/styles/bills_list.css
+++ b/css/styles/bills_list.css
@@ -5,3 +5,48 @@
     background-color: inherit;
     border: none;
 }
+
+#h3 {
+    font-weight: bold;
+}
+
+
+/*radio button style*/
+
+#radio_row {
+    margin: 0px 15px;
+    font-weight: lighter;
+    font-size: 20px;
+    text-align: center;
+}
+
+
+/*close button style*/
+
+#close {
+    font-size: 18px;
+    text-align: center;
+    color: #050102;
+}
+
+
+/*table style*/
+
+#tableFixHead {
+    overflow-y: auto;
+    height: 450px;
+    direction: ltr;
+}
+
+#tableFixHead thead th {
+    position: sticky;
+    top: 0;
+}
+
+th {
+    background: #B0C4DE;
+    text-align: center;
+    color: #050102;
+    font-size: 18px;
+    font-weight: normal;
+}
