--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body {
     text-align: right;
     /* background-color: #74c69d; */
-    background-color: #ccd5ae;
+    background-color: #effbff;
     /* background-color: lightgrey; */
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
@@ -14,19 +14,25 @@ body {
 
 .container {
     /* background-color: #40916c; */
-    background-color: #325865;
+    background-color: #00bbf0;
     /* background-color: rgb(75, 129, 137); */
     border-style: groove;
     font-size: 17px;
-    border-radius: 25px;
+    border-radius: 15px;
     position: absolute;
-    color:#ccd5ae ;
+    color: #ffffff;
+    border-color: #005792;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .container-fluid {
-    background-color: rgb(75, 129, 137);
+    background-color: #00bbf0;
+    color: #ffffff;
     border-style: groove;
     font-size: 17px;
-    border-radius: 25px;
-    position: absolute;
+    border-radius: 15px;
+    /* position: absolute; */
+    border-color: #005792;
 }
