--- a/css/styles/open_file.css
+++ b/css/styles/open_file.css
@@ -1,12 +1,12 @@
 .container {
-    left: 25%;
-    top:20%;
     width: 50%;
     /* height:50% ; */
     padding: 30px;
-
 }
-#btn-grp, #new, #add{
+
+#btn-grp,
+#new,
+#add {
     border-radius: 4px;
     text-align: center;
     margin: 1px;
