--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
     /* background-color: lightgrey; */
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 17;
+    font-size: 17px;
 }
 
 .container {
@@ -29,9 +29,9 @@ body {
 
 .container-fluid {
     background-color: #00bbf0;
-    color: #ffffff;
+    color: #000000;
     border-style: groove;
-    font-size: 17px;
+    font-size: 19px;
     border-radius: 15px;
     /* position: absolute; */
     border-color: #005792;
