--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body {
     text-align: right;
     /* background-color: #74c69d; */
-    background-color: #effbff;
+    background-color: #2F4F4F;
     /* background-color: lightgrey; */
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
@@ -14,14 +14,15 @@ body {
 
 .container {
     /* background-color: #40916c; */
-    background-color: #00bbf0;
+    /*background-color: #008080;*/
+    background-color: #800000;
     /* background-color: rgb(75, 129, 137); */
     border-style: groove;
     font-size: 17px;
     border-radius: 15px;
     position: absolute;
     color: #ffffff;
-    border-color: #005792;
+    border-color: #000000;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
