--- a/css/style.css
+++ b/css/style.css
@@ -4,25 +4,23 @@
 
 body {
     text-align: right;
-    /* background-color: #74c69d; */
-    background-color: #2F4F4F;
-    /* background-color: lightgrey; */
+    /*background-color: #0a4b64;*/
+    background-color: #0a5e6d;
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
 }
 
 .container {
-    /* background-color: #40916c; */
-    /*background-color: #008080;*/
-    background-color: #800000;
+    /*background-color: #0e2a49;*/
+    background-color: #0a4b64;
     /* background-color: rgb(75, 129, 137); */
     border-style: groove;
     font-size: 17px;
     border-radius: 15px;
     position: absolute;
     color: #ffffff;
-    border-color: #000000;
+    border-color: #ffffff;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
