--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body {
     text-align: right;
     /*background-color: #0a4b64;*/
-    background-color: #0a5e6d;
+    background-color: #97e0ebc7;
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
@@ -13,14 +13,19 @@ body {
 
 .container {
     /*background-color: #0e2a49;*/
-    background-color: #0a4b64;
+    /* background-color: #0a4b64; */
     /* background-color: rgb(75, 129, 137); */
+    /* background-image: linear-gradient(to right, #00b4db, #0083b0); */
+    /* background-image: radial-gradient( circle farthest-corner at 22.4% 21.7%, rgba(4, 189, 228, 1) 0%, rgba(2, 83, 185, 1) 100.2%); */
+    background-image: linear-gradient(to right, #2c3e50, #4ca1af);
+    /* background-image: linear-gradient(to right, #2c3e50, #3f7f89); */
+    /* background-image: linear-gradient(to right, #141e30, #243b55); */
     border-style: groove;
     font-size: 17px;
     border-radius: 15px;
     position: absolute;
     color: #ffffff;
-    border-color: #ffffff;
+    border-color: #233140;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
