--- a/css/styles/category_card.css
+++ b/css/styles/category_card.css
@@ -11,13 +11,14 @@
 }
 
 #button_grp {
-    border-radius: 5px;
+    /* border-radius: 5px;
     margin: 6px;
-    width: 80px;
+    width: 80px; */
+    width: 63px;
 }
 
 #button_col {
-    margin-right: 40px;
+   margin-right: 25%;
 }
 
 h4 {
@@ -30,4 +31,9 @@ h4 {
 #last_next {
     /* margin: 0px 4px; */
     border-radius: 4px;
+}
+span{
+    font-size: 23px;
+    width: 25px;
+   
 }
