--- a/css/styles/category_card.css
+++ b/css/styles/category_card.css
@@ -15,6 +15,7 @@
     margin: 6px;
     width: 80px; */
     width: 63px;
+    box-shadow: 0px 0px 10px 1px rgba(34, 34, 36, 0.938) ;
 }
 
 #button_col {
@@ -31,6 +32,9 @@ h4 {
 #last_next {
     /* margin: 0px 4px; */
     border-radius: 4px;
+    margin: 0px 2px;
+    padding-right: 6px;
+    box-shadow: 0px 0px 5px 1px rgba(34, 34, 36, 0.938) ;
 }
 span{
     font-size: 23px;
