--- a/css/styles/item_card.css
+++ b/css/styles/item_card.css
@@ -29,4 +29,12 @@ h4 {
 #last_next {
     /* margin: 0px 4px; */
     border-radius: 4px;
+    margin: 0px 2px;
+    padding-right: 6px;
+    box-shadow: 0px 0px 5px 1px rgba(34, 34, 36, 0.938) ;
+}
+span{
+    font-size: 23px;
+    width: 25px;
+   
 }
