--- a/css/styles/accountStatment.css
+++ b/css/styles/accountStatment.css
@@ -24,7 +24,7 @@ th {
     background: #eee;
 }
 
-#btn-grp {
+#btn-grp,#print {
     border-radius: 4px;
     text-align: center;
     margin: 1px;
