--- a/css/styles/accountStatment.css
+++ b/css/styles/accountStatment.css
@@ -11,7 +11,7 @@
 
 #tableFixHead {
     overflow-y: auto;
-    height: 300px;
+    height: 400px;
     direction: ltr;
 }
 
@@ -22,6 +22,30 @@
 
 th {
     background: #eee;
+}
+#date_col{
+    width: 8%;
+}
+#doc_col{
+    width: 9%;
+}
+#cross_col{
+    width: 10%;
+}
+#item_col{
+    display:none;
+    width:6% ;
+
+}
+#total_wight,#last_wight{
+    width: 8%;
+
+}
+#num_col{
+    width: 5%;
+}
+#total_price_col{
+    width: 10%;
 }
 
 #btn-grp,#print {
@@ -37,4 +61,9 @@ th {
 
 #lbl-radio-type {
     padding-right: 5px;
+}
+.account_auto{
+    padding-left: 0;
+    padding-right:0;
+
 }
