--- a/css/styles/com_bill.css
+++ b/css/styles/com_bill.css
@@ -1,6 +1,6 @@
+
 .container-fluide {
     width: 100%;
-    background-color: inherit;
 }
 
 
@@ -28,21 +28,39 @@ td input {
     padding: 0px;
 }
 
-#bill_date input {
-    width: 145px;
-    border: none;
+#date {
+    width: 140px;
+    /* border: none; */
+    padding-right: 0px;
+    padding-left: 0px;
+    padding-bottom: 3px;
+    /* direction: ltr; */
+}
+#bill_date_lbl{
+    padding-top: 4px;
+
+}
+#bill_num_lbl{
+    padding-top: 4px;
+
 }
 
-#bill_num input {
-    background: inherit;
-    border: none;
+#code {
+    /* background: inherit; */
+    /* border: none; */
+    padding-bottom: 3px;
+    
+   
 }
 
-#add_row {
-    border-radius: 50%;
-    border: solid black 2px;
+#add_row,#toggle_discount {
+    /* border-radius: 50%; */
+    /* border: solid black 2px; */
     background-color: inherit;
-    font-size: 20px;
+    border: none;
+    /* font-size: 20px; */
+    margin: 1px 0px;
+    cursor: pointer;
 }
 
 #total,
@@ -215,8 +233,14 @@ td input {
 #previous,
 #next,
 #last_next {
-    /* margin: 0px 4px;
-    border-radius: 4px; */
+    border-radius: 4px;
+    box-shadow: 0px 0px 5px 1px rgba(34, 34, 36, 0.938) ;
+    margin: 0px 2px;
+   
+}
+span{
+    font-size: 23px;
+    width: 25px;
 }
 
 h2 {
