--- a/css/styles/setting.css
+++ b/css/styles/setting.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
-  }
+}
 
+#tbl input {}
 
 .sidebar {
     margin: 0;
@@ -35,121 +36,136 @@ div.content {
     margin-right: 200px;
     padding: 1px 16px;
     height: 1000px;
-
-
 }
 
 @media screen and (max-width: 700px) {
     .sidebar {
-      width: 100%;
-      height: auto;
-      position: relative;
-                    }
-
-.sidebar a {
-      float: left;
-                    }
-
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+    .sidebar a {
+        float: left;
+    }
     div.content {
-      margin-left: 0;
-                    }
+        margin-left: 0;
+    }
 }
 
-  @media screen and (max-width: 400px) {
+@media screen and (max-width: 400px) {
     .sidebar a {
-      text-align: center;
-      float: none;
+        text-align: center;
+        float: none;
     }
-  }
-  #page_size{
-    margin-bottom: 20px; 
-    margin-top:10px;
+}
+
+#page_size {
+    margin-bottom: 20px;
+    margin-top: 10px;
     margin-right: 10px;
-    font-size:19px;
-  }
-  #page_size select{
+    font-size: 19px;
+}
+
+#page_size select {
     margin-right: 20px;
-    width:70px;
-  }
-  #page_size label{
+    width: 70px;
+}
+
+#page_size label {
     margin-top: 5px;
-    
-  }
-  td{
+}
+
+td {
     /* background-color: violet; */
     /* width: 120px; */
     padding: 8px;
     /* padding-left: 10px; */
-  }
-  #padding-col{
-    padding-right: 17px;
-  }
-
-
-  /* The container */
-.container {
-width: 145px;
-display: block;
-position: relative;
-padding-left: 35px;
-margin-bottom: 12px;
-cursor: pointer;
-font-size: 19px;
-user-select: none;
-border: none;
-border-radius: 0px;
-background-color: inherit;
-color: black;
 }
+
+#padding-col {
+    padding-right: 17px;
+}
+
+
+/* The container */
+
+.container {
+    width: 145px;
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 19px;
+    user-select: none;
+    border: none;
+    border-radius: 0px;
+    background-color: inherit;
+    color: black;
+}
+
 
 /* Hide the browser's default checkbox */
+
 .container input {
-position: absolute;
-opacity: 0;
-cursor: pointer;
-height: 0;
-width: 0;
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
 }
+
 
 /* Create a custom checkbox */
+
 .checkmark {
-position: absolute;
-top: 0;
-left: 0;
-height: 25px;
-width: 25px;
-background-color: #eee;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
 }
+
 
 /* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
-background-color: #ccc;
+
+.container:hover input~.checkmark {
+    background-color: #ccc;
 }
+
 
 /* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
-background-color: #2196F3;
+
+.container input:checked~.checkmark {
+    background-color: #2196F3;
 }
+
 
 /* Create the checkmark/indicator (hidden when not checked) */
+
 .checkmark:after {
-content: "";
-position: absolute;
-display: none;
+    content: "";
+    position: absolute;
+    display: none;
 }
+
 
 /* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
-display: block;
+
+.container input:checked~.checkmark:after {
+    display: block;
 }
 
+
 /* Style the checkmark/indicator */
+
 .container .checkmark:after {
-left: 9px;
-top: 5px;
-width: 5px; 
-height: 10px;
-border: solid white;
-border-width: 0 3px 3px 0;
-transform: rotate(45deg);
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg);
 }
