--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+/* font import start */
+/* @font-face {
+    font-family: 'baloo_bhaijaan_2regular';
+    src: url('assets/fonts/webfontkit_Baloo_Bhaijaan_2/baloobhaijaan2-variablefont_wght-webfont.woff2') format('woff2'),
+         url('assets/fonts/webfontkit_Baloo_Bhaijaan_2/baloobhaijaan2-variablefont_wght-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+} */
+/* font import end */
+
+
+
 * {
     direction: rtl;
 }
