--- a/css/styles/bills_list.css
+++ b/css/styles/bills_list.css
@@ -75,9 +75,9 @@ th {
 
 }
 .btn{
-    -moz-box-shadow: inset 0 0 10px rgb(39, 34, 34);
-    -webkit-box-shadow: inset 0 0 10px rgb(39, 34, 34);
-    box-shadow: inset 0 0 10px rgb(39, 34, 34);
+    -moz-box-shadow:  0 0 10px rgb(5, 4, 4);
+    -webkit-box-shadow:  0 0 10px rgb(0, 0, 0);
+    box-shadow:  0 0 10px rgb(0, 0, 0);
     width: 100px;
 
 }
