--- a/css/styles/catch_bonds.css
+++ b/css/styles/catch_bonds.css
@@ -66,8 +66,6 @@ span{
 
 .modal-header {
     padding: 0 10px;
-    /* background-color: rgb(52,92,100);; */
-    /* color: white;    */
     display: flex;
 }
 
@@ -75,7 +73,6 @@ span{
     position: relative;
     min-width: 780;
     min-height: 630px;
-    background-color: rgb(52, 92, 100);
 }
 
 h4 {}
@@ -85,6 +82,10 @@ h4 {}
     width: 770px;
     height: 600px;
 }
+.close{
+    line-height: 1.5;
+}
+
 
 #code {
   margin-left: 25px;
